fix: more mobile-friendly spacing

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,14 @@ h2 {
   padding: 50px;
 }
 
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="card"] {
+    width: 90%;
+    padding: 20px;
+  }
+}
+
 a {
   color: var(--text-color);
   border-bottom: dotted var(--text-color) 1px;
